[gd_scene load_steps=2 format=3 uid="uid://cw7qg8bxm6yxe"]

[ext_resource type="Script" path="res://scripts/victory_screen.gd" id="1_hn8mx"]

[node name="VictoryScreen" type="CanvasLayer"]
visible = false
script = ExtResource("1_hn8mx")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30
alignment = 1

[node name="WinnerLabel" type="Label" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "PLAYER X WINS!"
horizontal_alignment = 1

[node name="ScoresLabel" type="Label" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "FINAL SCORES:

Player 1: 10
Player 2: 5"
horizontal_alignment = 1

[node name="MainMenuButton" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "Main Menu"

[connection signal="pressed" from="ColorRect/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
